refactor: 형식 수정